--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Create a Node.js app for building Realtime Chat RESTful APIs using Express",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
