--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,11 @@ DB_PORT=
 JWT_SECRET=
 JWT_EXPIRED=
 
-# email
-HOST_SMTP=
-PORT_SMTP=
-EMAIL_AUTH_STMP=
-PASS_AUTH_STMP=
+# google
 EMAIL_FROM=
+EMAIL_USER=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+REDIRECT_URI=
+GMAIL_REFRESH_TOKEN=
+DRIVE_REFRESH_TOKEN=
