--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
+    "googleapis": "^104.0.0",
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
-    "nodemailer-express-handlebars": "^5.0.0",
     "pg": "^8.7.3",
     "socket.io": "^4.5.1",
     "uuid": "^8.3.2",
